--- a/packages/provider-app-entry/Dockerfile
+++ b/packages/provider-app-entry/Dockerfile
@@ -1,7 +1,5 @@
 FROM reg.hydevops.com/3th_party/nginx:1.19.2-alpine
 
-ARG APP_PATH
-
-COPY $APP_PATH /usr/share/nginx/html
+COPY ./dist /usr/share/nginx/html
 
 EXPOSE 80
