--- a/packages/provider-app-entry/package.json
+++ b/packages/provider-app-entry/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "set:version": "vh gen",
     "start": "cross-env PORT=6679 minictl start",
-    "build": "npm run set:version && minictl build",
+    "build": "npm run set:version && GENERATE_SOURCEMAP=false minictl build",
     "analyz": "minictl analyz"
   },
   "peerDependencies": {
