--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "declaration": true,
-    "module": "es2020",
+    "module": "commonjs",
     "moduleResolution": "node",
     "jsx": "react"
   },
