--- a/packages/web-server/package.json
+++ b/packages/web-server/package.json
@@ -24,7 +24,10 @@
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
+    "archiver": "^5.0.2",
     "axios": "^0.20.0",
+    "express": "^4.17.1",
+    "fs-extra": "^9.0.1",
     "immer": "^7.0.9",
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.2",
