chore: 暂时用 node 作为发布应用端静态资源管理

--- a/packages/web-platform/server/config.json
+++ b/packages/web-platform/server/config.json
@@ -1,4 +1,5 @@
 {
-  "uploadFolder":"/web-platform/page-unzip-data",
-  "projectFolder":"/usr/src/web-platform/dist"
+  "uploadFolder":"/tmp/web-platform/page-unzip-data",
+  "projectFolder":"/usr/src/web-platform-update/app",
+  "port": 3300
 }
