--- a/packages/web-platform/Dockerfile
+++ b/packages/web-platform/Dockerfile
@@ -1,16 +1,18 @@
 # dockerfile
 # build stage
 FROM node:lts-alpine as build-stage
-RUN mkdir -p /usr/src/web-platform/
-WORKDIR /usr/src/web-platform
+RUN mkdir -p /usr/src/web-platform-update/app
+WORKDIR /usr/src/web-platform-update/app
+COPY dist ./
+WORKDIR /usr/src/web-platform-update
 COPY server ./
-WORKDIR /usr/src/web-platform/server
-CMD npm start
+EXPOSE 3300
+CMD npm run start
 
 # production stage
-FROM nginx:stable-alpine as production-stage
-WORKDIR /usr/src/web-platform
-COPY dist /usr/share/nginx/html
-COPY nginx.conf /etc/nginx/nginx.conf
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+# FROM nginx:stable-alpine as production-stage
+# WORKDIR /usr/src/web-platform
+# COPY dist /usr/share/nginx/html
+# COPY nginx.conf /etc/nginx/nginx.conf
+# EXPOSE 80
+# CMD ["nginx", "-g", "daemon off;"]
