--- a/packages/web-server/package.json
+++ b/packages/web-server/package.json
@@ -26,6 +26,7 @@
     "@nestjs/platform-express": "^7.0.0",
     "axios": "^0.20.0",
     "immer": "^7.0.9",
+    "lodash": "^4.17.20",
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.2",
     "rimraf": "^3.0.2",
