--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "downlevelIteration": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
+    "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "noImplicitAny": false,
