--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,2 @@
-registry=http://nexus.hydevops.com/repository/npm-taobao-proxy/
+registry=http://nexus.hydevops.com/repository/npm-hy-frontend-group/
+# registry=http://nexus.hydevops.com/repository/npm-taobao-proxy/
