--- a/cd/app_env_config/provider-app-config.json
+++ b/cd/app_env_config/provider-app-config.json
@@ -1,5 +1,6 @@
 {
   "apiUrl": "http://192.168.14.181:6090",
   "nodeWebServerUrl": "http://192.168.14.181:5100",
-  "perviewAppUrl": "http://192.168.14.181:5020"
+  "perviewAppUrl": "http://192.168.14.181:5020",
+  "prodAppUrl": "http://192.168.14.181:5020"
 }
