--- a/packages/provider-app-entry/public/config.json
+++ b/packages/provider-app-entry/public/config.json
@@ -2,5 +2,5 @@
   "apiUrl": "http://192.168.14.181:6090",
   "nodeWebServerUrl": "http://localhost:3000",
   "perviewAppUrl": "http://localhost:8000",
-  "prodAppUrl": "http://localhost:8000"
+  "prodAppApiUrl": "192.168.14.140:7090"
 }
