--- a/cd/app_env_config_storage/192.168.14.181/provider-app-config.json
+++ b/cd/app_env_config_storage/192.168.14.181/provider-app-config.json
@@ -1,6 +1,7 @@
 {
-  "apiUrl": "http://192.168.14.181:6090",
   "nodeWebServerUrl": "http://192.168.14.181:5100",
   "perviewAppUrl": "http://192.168.14.181:5020",
-  "prodAppUrl": "http://192.168.14.181:5020"
+  "apiUrl": "http://192.168.14.181:6090",
+  "proNodeWebServerUrl": "192.168.14.181:5020",
+  "prodAppApiUrl": "192.168.14.140:7090"
 }
