--- a/packages/web-platform/server/package.json
+++ b/packages/web-platform/server/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "cors": "^2.8.5",
     "fs-extra": "^9.0.1",
     "multer": "^1.4.2"
   }
