--- a/packages/provider-app-entry/public/config.json
+++ b/packages/provider-app-entry/public/config.json
@@ -2,6 +2,8 @@
   "apiUrl": "http://192.168.14.181:6090",
   "nodeWebServerUrl": "http://localhost:3000",
   "perviewAppUrl": "http://localhost:8000",
+  "prevNodeWebServerUrl": "192.168.14.181:5100",
   "proNodeWebServerUrl": "192.168.14.181:5020",
+  "previewAppApiUrl": "192.168.14.181:7090",
   "prodAppApiUrl": "192.168.14.140:7090"
 }
