refactor: 重新调整平台组件和属性项的接入规则，采用 decorator 的方式进行强约束

--- a/packages/spec/platform-widget/package.json
+++ b/packages/spec/platform-widget/package.json
@@ -5,6 +5,7 @@
   "author": "SANGET",
   "license": "MIT",
   "dependencies": {
-    "@ant-design/pro-table": "^2.9.7"
+    "@ant-design/pro-table": "^2.9.7",
+    "reflect-metadata": "^0.1.13"
   }
 }
