--- a/packages/web-platform/public/config.json
+++ b/packages/web-platform/public/config.json
@@ -1,9 +1,4 @@
 {
-  "passServerUrl": "http://192.168.14.181:6090",
-  "previewSassServerUrl": "http://192.168.14.181:7090",
-  "previewPageServerUrl": "http://localhost:3000",
-  "previewAppUrl": "http://localhost:8000",
-  "publishSassServerUrl": "http://192.168.14.181:7090",
-  "publishPageServerUrl": "http://192.168.14.181:5020",
-  "publishAppUrl": "http://192.168.14.181:5020"
+  "saasServerUrl": "http://192.168.14.181:7090",
+  "pageServerUrlForApp": "http://localhost:3000"
 }
