--- a/cd/app_env_config/provider-app-config.json
+++ b/cd/app_env_config/provider-app-config.json
@@ -1,9 +1,6 @@
 {
-  "nodeWebServerUrl": "http://192.168.14.181:5100",
-  "perviewAppUrl": "http://192.168.14.181:5020",
-  "apiUrl": "http://192.168.14.181:6090",
-  "prevNodeWebServerUrl": "192.168.14.181:5100",
-  "proNodeWebServerUrl": "192.168.14.181:5020",
-  "previewAppApiUrl": "192.168.14.181:7090",
-  "prodAppApiUrl": "192.168.14.140:7090"
+  "FEResourceServerUrl": "http://192.168.14.181:5100",
+  "paasServerUrl": "http://192.168.14.181:6090",
+  "saasServerUrlForPreviewApp": "http://192.168.14.181:7090",
+  "previewAppEntryUrl": "http://192.168.14.181:5020"
 }
