--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "lerna": "^3.21.0",
     "prettier": "^2.0.5",
     "ts-jest": "26.1.4",
-    "typescript": "^4.0.3"
+    "typescript": "4.0.3"
   },
   "husky": {
     "hooks": {
