--- a/packages/consumer-app-web-client/package.json
+++ b/packages/consumer-app-web-client/package.json
@@ -56,6 +56,7 @@
     "@ant-design/pro-descriptions": "^1.0.17",
     "@ant-design/pro-layout": "^6.4.18",
     "@ant-design/pro-table": "^2.7.4",
+    "@types/store": "^2.0.2",
     "antd": "^4.6.3",
     "classnames": "^2.2.6",
     "lodash": "^4.17.11",
@@ -66,10 +67,10 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-helmet-async": "^1.0.4",
+    "store": "^2.0.12",
     "umi": "^3.2.20",
     "umi-request": "^1.0.8",
-    "use-merge-value": "^1.0.1",
-    "store": "^2.0.12"
+    "use-merge-value": "^1.0.1"
   },
   "devDependencies": {
     "@ant-design/pro-cli": "^2.0.2",
