--- a/packages/consumer-app-web-server/config.json
+++ b/packages/consumer-app-web-server/config.json
@@ -1,5 +1,5 @@
 {
-  "uploadFolder":"/tmp/web-platform/page-unzip-data",
-  "projectFolder":"/tmp/web-platform-update/app",
+  "uploadFolder": "unzip",
+  "projectFolder": "app",
   "port": 3000
 }
