--- a/packages/platform-web-server/package.json
+++ b/packages/platform-web-server/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "prebuild": "yarn && rimraf dist",
-    "build": "nest build",
+    "build": "rm -rf dist && nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "yarn && nest start --watch",
