refactor: 重新整理应用端的部署、应用安装链路

--- a/cd/app_env_config_storage/192.168.14.181/consumer-app-config.json
+++ b/cd/app_env_config_storage/192.168.14.181/consumer-app-config.json
@@ -1,4 +1,5 @@
 {
   "pageServerUrlForApp": "http://192.168.14.181:5020",
-  "saasServerUrl": "http://192.168.14.181:7090"
+  "saasServerUrl": "http://192.168.14.181:7090",
+  "currentApp": "zxx"
 }
