--- a/packages/consumer-app-hub/web-server/package.json
+++ b/packages/consumer-app-hub/web-server/package.json
@@ -6,8 +6,7 @@
   "author": "vale",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon .",
-    "serve:mock": "NODE_ENV=test nodemon ."
+    "start": "NODE_ENV=test nodemon ."
   },
   "dependencies": {
     "express": "^4.17.1",
@@ -21,13 +20,6 @@
     "@types/node": "^14.14.7",
     "@types/supertest": "^2.0.8",
     "nodemon": "2.0.6",
-    "eslint": "^7.3.1",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-loader": "4.0.2",
-    "eslint-plugin-flowtype": "5.1.3",
-    "eslint-plugin-import": "2.21.2",
-    "eslint-plugin-jsx-a11y": "6.3.1",
     "jest": "26.4.2",
     "prettier": "^1.19.1"
   }
