--- a/packages/consumer-app-hub/web-server/package.json
+++ b/packages/consumer-app-hub/web-server/package.json
@@ -10,8 +10,8 @@
     "serve": "node ."
   },
   "dependencies": {
-    "express": "^4.17.1",
     "cors": "^2.8.5",
+    "express": "4.17.1",
     "fs-extra": "^9.0.1",
     "multer": "^1.4.2"
   },
@@ -20,8 +20,8 @@
     "@types/jest": "26.0.10",
     "@types/node": "^14.14.7",
     "@types/supertest": "^2.0.8",
-    "nodemon": "2.0.6",
     "jest": "26.4.2",
+    "nodemon": "2.0.6",
     "prettier": "^1.19.1"
   }
 }
