--- a/packages/consumer-app-hub/web-server/package.json
+++ b/packages/consumer-app-hub/web-server/package.json
@@ -10,8 +10,10 @@
     "serve": "node ."
   },
   "dependencies": {
+    "axios": "^0.21.0",
+    "consul": "^0.39.0",
     "cors": "^2.8.5",
-    "express": "4.17.1",
+    "express": "^4.17.1",
     "fs-extra": "^9.0.1",
     "multer": "^1.4.2"
   },
