--- a/packages/platform-web-server/Dockerfile
+++ b/packages/platform-web-server/Dockerfile
@@ -1,15 +1,15 @@
-FROM reg.hydevops.com/base_images/node:14.4-alpine3.12
+FROM node:lts-alpine as build-stage
 
 WORKDIR  /var/node-web-server
 
 COPY ./dist ./
 COPY ./node_modules ./node_modules
 
-ENV HOST 0.0.0.0
+# ENV HOST 0.0.0.0
 
 # RUN true \
 #     && npm config set registry  http://nexus.hydevops.com/repository/npm-hy-frontend-group/ \
-#     && npm install -g pm2 
+#     && npm install -g pm2
 
 EXPOSE 3000
 
