--- a/packages/platform-web-server/package.json
+++ b/packages/platform-web-server/package.json
@@ -26,6 +26,7 @@
     "@nestjs/platform-express": "^7.0.0",
     "archiver": "^5.0.2",
     "axios": "^0.20.0",
+    "consul": "^0.39.0",
     "express": "^4.17.1",
     "fs-extra": "^9.0.1",
     "immer": "^7.0.9",
