feat: 变量的完善

--- a/packages/provider-app-pages-hub/PageDesigner/package.json
+++ b/packages/provider-app-pages-hub/PageDesigner/package.json
@@ -6,7 +6,8 @@
     "start": "cross-env PORT=6689 minictl start"
   },
   "devDependencies": {
-    "@infra/react-dev-env-scripts": "^0.0.1"
+    "@infra/react-dev-env-scripts": "^0.0.1",
+    "moment": "^2.25.3"
   },
   "dependencies": {
   },
