--- a/packages/platform-widget-custom-editor-hub/TableEditor/package.json
+++ b/packages/platform-widget-custom-editor-hub/TableEditor/package.json
@@ -5,5 +5,9 @@
   "author": "SANGET",
   "license": "MIT",
   "dependencies": {
+    "sortablejs": "^1.12.0"
+  },
+  "devDependencies": {
+    "@types/sortablejs": "^1.10.6"
   }
 }
