feat: 应用端支持选择多应用

--- a/cd/app_env_config_storage/192.168.14.181/consumer-app-config.json
+++ b/cd/app_env_config_storage/192.168.14.181/consumer-app-config.json
@@ -1,5 +1,4 @@
 {
   "pageServerUrlForApp": "http://192.168.14.181:5020",
-  "saasServerUrl": "http://192.168.14.181:7090",
-  "currentApp": "zxx"
+  "saasServerUrl": "http://192.168.14.181:7090"
 }
