--- a/packages/consumer-app-hub/web-client/public/config.json
+++ b/packages/consumer-app-hub/web-client/public/config.json
@@ -1,5 +1,4 @@
 {
   "saasServerUrl": "http://192.168.14.181:7090",
-  "pageServerUrlForApp": "http://localhost:3000",
-  "currentApp": "zxx"
+  "pageServerUrlForApp": "http://localhost:3000"
 }
