--- a/packages/infra-react-env-scripts/package.json
+++ b/packages/infra-react-env-scripts/package.json
@@ -11,10 +11,10 @@
     "@babel/core": "7.4.3",
     "@babel/plugin-proposal-export-default-from": "^7.2.0",
     "@svgr/webpack": "4.1.0",
-    "@types/react": "^16.9.44",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-redux": "^7.1.9",
-    "@types/redux": "^3.6.0",
+    "@types/react": "17.0.0",
+    "@types/react-dom": "17.0.0",
+    "@types/react-redux": "7.1.11",
+    "@types/redux": "3.6.0",
     "ts-loader": "^8.0.3",
     "babel-loader": "8.0.5",
     "babel-plugin-named-asset-import": "^0.3.6",
