--- a/packages/consumer-app-hub/web-client/package.json
+++ b/packages/consumer-app-hub/web-client/package.json
@@ -65,10 +65,10 @@
     "qs": "^6.9.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "react-helmet-async": "1.0.4",
-    "store": "2.0.12",
-    "umi": "3.2.20",
-    "umi-request": "1.0.8",
+    "react-helmet-async": "^1.0.4",
+    "store": "^2.0.12",
+    "umi": "^3.2.20",
+    "umi-request": "^1.0.8",
     "use-merge-value": "^1.0.1"
   },
   "devDependencies": {
@@ -78,16 +78,16 @@
     "@types/jest": "^26.0.0",
     "@types/lodash": "^4.14.144",
     "@types/qs": "^6.5.3",
-    "@types/react": "17.0.0",
-    "@types/react-dom": "17.0.0",
-    "@types/react-helmet": "6.1.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-helmet": "^6.1.0",
     "@types/store": "^2.0.2",
-    "@umijs/fabric": "2.2.0",
-    "@umijs/plugin-blocks": "2.0.5",
-    "@umijs/plugin-esbuild": "1.0.0-beta.2",
-    "@umijs/preset-ant-design-pro": "1.2.0",
-    "@umijs/preset-react": "1.4.8",
-    "@umijs/yorkie": "2.0.3",
+    "@umijs/fabric": "^2.2.0",
+    "@umijs/plugin-blocks": "^2.0.5",
+    "@umijs/plugin-esbuild": "^1.0.0-beta.2",
+    "@umijs/preset-ant-design-pro": "^1.2.0",
+    "@umijs/preset-react": "^1.4.8",
+    "@umijs/yorkie": "^2.0.3",
     "cross-env": "^7.0.0",
     "cross-port-killer": "^1.1.1",
     "detect-installer": "^1.0.1",
