--- a/packages/consumer-app-hub/web-client/package.json
+++ b/packages/consumer-app-hub/web-client/package.json
@@ -53,9 +53,9 @@
   ],
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
-    "@ant-design/pro-descriptions": "^1.0.17",
-    "@ant-design/pro-layout": "^6.4.18",
-    "@ant-design/pro-table": "^2.7.4",
+    "@ant-design/pro-descriptions": "1.0.36",
+    "@ant-design/pro-layout": "6.5.15",
+    "@ant-design/pro-table": "2.11.4",
     "antd": "^4.6.3",
     "classnames": "^2.2.6",
     "lodash": "^4.17.11",
@@ -65,10 +65,10 @@
     "qs": "^6.9.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "react-helmet-async": "^1.0.4",
+    "react-helmet-async": "^1.0.7",
     "store": "^2.0.12",
-    "umi": "3.2.20",
-    "umi-request": "1.0.8",
+    "umi": "3.2.28",
+    "umi-request": "1.3.5",
     "use-merge-value": "^1.0.1"
   },
   "devDependencies": {
@@ -82,12 +82,12 @@
     "@types/react-dom": "17.0.0",
     "@types/react-helmet": "^6.1.0",
     "@types/store": "^2.0.2",
-    "@umijs/fabric": "2.2.0",
-    "@umijs/plugin-blocks": "2.0.5",
-    "@umijs/plugin-esbuild": "1.0.0-beta.2",
-    "@umijs/preset-ant-design-pro": "1.2.0",
+    "@umijs/fabric": "2.3.1",
+    "@umijs/plugin-blocks": "2.2.2",
+    "@umijs/plugin-esbuild": "1.0.1",
+    "@umijs/preset-ant-design-pro": "1.3.0",
     "@umijs/preset-react": "1.4.8",
-    "@umijs/yorkie": "2.0.3",
+    "@umijs/yorkie": "2.0.5",
     "cross-env": "^7.0.0",
     "cross-port-killer": "^1.1.1",
     "detect-installer": "^1.0.1",
