--- a/packages/consumer-app-hub/web-client/package.json
+++ b/packages/consumer-app-hub/web-client/package.json
@@ -100,6 +100,9 @@
     "stylelint": "^13.0.0",
     "typescript": "^4.0.3"
   },
+  "resolutions": {
+    "@types/react": "17.0.0"
+  },
   "engines": {
     "node": ">=10.0.0"
   }
