--- a/packages/infra-react-env-scripts/package.json
+++ b/packages/infra-react-env-scripts/package.json
@@ -11,8 +11,8 @@
     "@babel/core": "7.4.3",
     "@babel/plugin-proposal-export-default-from": "^7.2.0",
     "@svgr/webpack": "4.1.0",
-    "@types/react": "17.0.0",
-    "@types/react-dom": "17.0.0",
+    "@types/react": "16.14.2",
+    "@types/react-dom": "16.9.10",
     "@types/react-redux": "7.1.11",
     "@types/redux": "3.6.0",
     "ts-loader": "^8.0.3",
@@ -66,6 +66,10 @@
     "webpack-manifest-plugin": "2.0.4",
     "webpack-merge": "4.2.2",
     "workbox-webpack-plugin": "4.2.0"
+  },
+  "resolutions": {
+    "@types/react-dom": "16.9.10",
+    "@types/react": "16.14.0"
   },
   "devDependencies": {},
   "repository": {
