--- a/packages/consumer-app-hub/web-client/package.json
+++ b/packages/consumer-app-hub/web-client/package.json
@@ -67,8 +67,8 @@
     "react-dom": "^16.14.0",
     "react-helmet-async": "^1.0.7",
     "store": "^2.0.12",
-    "umi": "3.2.28",
-    "umi-request": "1.3.5",
+    "umi": "^3.2.20",
+    "umi-request": "^1.0.8",
     "use-merge-value": "^1.0.1"
   },
   "devDependencies": {
@@ -80,14 +80,14 @@
     "@types/qs": "^6.5.3",
     "@types/react": "16.14.2",
     "@types/react-dom": "16.9.10",
-    "@types/react-helmet": "^6.1.0",
+    "@types/react-helmet": "6.1.0",
     "@types/store": "^2.0.2",
-    "@umijs/fabric": "2.3.1",
-    "@umijs/plugin-blocks": "2.2.2",
-    "@umijs/plugin-esbuild": "1.0.1",
-    "@umijs/preset-ant-design-pro": "1.3.0",
-    "@umijs/preset-react": "1.4.8",
-    "@umijs/yorkie": "2.0.5",
+    "@umijs/fabric": "^2.2.0",
+    "@umijs/plugin-blocks": "^2.0.5",
+    "@umijs/plugin-esbuild": "^1.0.0-beta.2",
+    "@umijs/preset-ant-design-pro": "^1.2.0",
+    "@umijs/preset-react": "^1.4.8",
+    "@umijs/yorkie": "^2.0.3",
     "cross-env": "^7.0.0",
     "cross-port-killer": "^1.1.1",
     "detect-installer": "^1.0.1",
