--- a/packages/platform-widget-access-prop-rely/package.json
+++ b/packages/platform-widget-access-prop-rely/package.json
@@ -5,7 +5,7 @@
   "author": "SANGET",
   "license": "MIT",
   "dependencies": {
-    "@ant-design/pro-table": "^2.9.7",
+    "@ant-design/pro-table": "2.11.4",
     "reflect-metadata": "^0.1.13"
   }
 }
