--- a/packages/platform-web-server/package.json
+++ b/packages/platform-web-server/package.json
@@ -40,8 +40,8 @@
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
     "@types/express": "^4.17.3",
-    "@types/jest": "26.0.10",
-    "@types/node": "^14.14.7",
+    "@types/jest": "26.0.15",
+    "@types/node": "^14.14.10",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.9.1",
     "@typescript-eslint/parser": "3.9.1",
@@ -57,7 +57,7 @@
     "ts-loader": "^6.2.1",
     "ts-node": "9.0.0",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "3.7.4"
+    "typescript": "^3.9.7"
   },
   "jest": {
     "moduleFileExtensions": [
