--- a/packages/platform-widget-prop-item-hub/ActionHelper/package.json
+++ b/packages/platform-widget-prop-item-hub/ActionHelper/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@platform-widget-prop-item/action-helper",
-  "description": "动作的编辑",
+  "description": "事件的编辑",
   "version": "0.0.1",
   "author": "SANGET",
   "license": "MIT",
