--- a/package.json
+++ b/package.json
@@ -31,29 +31,32 @@
     "setup:registry": "sh scripts/set-npm-yarn-registry.sh",
     "commit": "git-cz"
   },
+  "dependencies": {
+    "core-js": "3.8.0"
+  },
   "devDependencies": {
-    "@commitlint/cli": "^7.4.0",
-    "@commitlint/config-conventional": "^7.3.1",
-    "@types/jest": "24.0.13",
-    "@types/node": "12.0.2",
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.10",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^24.8.0",
-    "commitizen": "^4.1.2",
+    "babel-jest": "^26.6.3",
+    "commitizen": "^4.2.2",
     "cross-env": "^7.0.2",
-    "cz-customizable": "^6.2.1",
-    "eslint": "^7.3.1",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-config-react-app": "^5.2.1",
+    "cz-customizable": "^6.3.0",
+    "eslint": "^7.14.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-react-app": "^6.0.0",
     "eslint-loader": "4.0.2",
-    "eslint-plugin-flowtype": "5.1.3",
+    "eslint-plugin-flowtype": "5.2.0",
     "eslint-plugin-import": "2.21.2",
     "eslint-plugin-jsx-a11y": "6.3.1",
     "eslint-plugin-react": "7.20.0",
     "eslint-plugin-react-hooks": "^4.0.4",
-    "husky": "^1.3.1",
+    "husky": "^4.3.0",
     "jest": "26.2.2",
     "jest-environment-jsdom-fourteen": "1.0.1",
     "jest-resolve": "26.2.2",
@@ -62,7 +65,7 @@
     "lerna": "^3.21.0",
     "prettier": "^2.0.5",
     "ts-jest": "26.1.4",
-    "typescript": "4.0.3"
+    "typescript": "4.1.2"
   },
   "husky": {
     "hooks": {
