--- a/packages/provider-app-biz-component-hub/pro-table/package.json
+++ b/packages/provider-app-biz-component-hub/pro-table/package.json
@@ -14,10 +14,11 @@
     "ie >= 11"
   ],
   "dependencies": {
-    "@ant-design/pro-field": "0.2.0",
-    "@ant-design/pro-form": "1.0.0-beta.22",
-    "@ant-design/pro-provider": "0.1.0",
-    "@ant-design/pro-utils": "0.2.0",
+    "@ant-design/icons": "^4.3.0",
+    "@ant-design/pro-field": "1.2.0",
+    "@ant-design/pro-form": "1.7.0",
+    "@ant-design/pro-provider": "1.2.1",
+    "@ant-design/pro-utils": "1.3.0",
     "dnd-core": "^10.0.2",
     "moment": "^2.24.0",
     "rc-resize-observer": "^0.2.1",
@@ -30,7 +31,7 @@
   },
   "peerDependencies": {
     "classnames": "^2.2.6",
-    "@ant-design/icons": "^4.1.0",
+    "@ant-design/icons": "^4.3.0",
     "antd": "4.x",
     "react": "^16.x"
   }
