--- a/packages/consumer-app-hub/web-client/package.json
+++ b/packages/consumer-app-hub/web-client/package.json
@@ -9,6 +9,10 @@
     "@infra/react-dev-env-scripts": "^0.0.1"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.3.0",
+    "@ant-design/pro-descriptions": "1.0.36",
+    "@ant-design/pro-layout": "6.5.15",
+    "@ant-design/pro-table": "2.12.0",
     "store": "^2.0.12"
   },
   "author": "SANGET",
