--- a/packages/platform-web-server/package.json
+++ b/packages/platform-web-server/package.json
@@ -31,9 +31,11 @@
     "fs-extra": "^9.0.1",
     "immer": "^7.0.9",
     "lodash": "^4.17.20",
+    "nest-winston": "^1.4.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.4",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
