update: 将 consul 的配置放到单独的目录下

--- a/packages/platform-web-server/tsconfig.json
+++ b/packages/platform-web-server/tsconfig.json
@@ -9,9 +9,13 @@
     "target": "es2017",
     "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": "./",
+    "baseUrl": ".",
+    "rootDir": ".",
     "incremental": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "paths": {
+      "@src/*": ["src/*"]
+    }
   },
   "exclude": ["../../node_modules"]
 }
