--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,6 @@
   "exclude": [
     "**/test/*",
     "**/demo/*",
-    "./packages/platform-web-server"
+    "packages/platform-web-server"
   ]
 }
