--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "prettier:base": "prettier --parser typescript",
     "format": "npm run prettier:base -- --write \"packages/**/*.{ts,tsx}\"",
     "test": "jest --coverage",
-    "lint": "eslint packages --fix",
+    "lint": "eslint packages --fix --quiet",
     "setup:registry": "sh scripts/set-npm-yarn-registry.sh",
     "commit": "git-cz"
   },
