--- a/packages/infra-react-env-scripts/package.json
+++ b/packages/infra-react-env-scripts/package.json
@@ -20,7 +20,7 @@
     "css-loader": "2.1.1",
     "dotenv": "6.2.0",
     "dotenv-expand": "4.2.0",
-    "dayjs": "^1.9.0",
+    "eslint-webpack-plugin": "^2.4.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "6.0.0",
     "fs-extra": "8.1.0",
