--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "build:consumer-app": "sh ./scripts/build-consumer-app.sh",
     "build:platform-web-server": "sh ./scripts/build-platform-web-server.sh",
     "build:visual-editor-app": "cd ./packages/engine/visual-editor && npm run build",
+    "build:doc-website": "cd ./doc-website && npm run build",
     "analyz:provider-app-entry": "cd ./packages/provider-app-entry && npm run analyz",
     "serve:provider-app": "cd ./packages/provider-app-entry && serve -s build",
     "prettier:base": "prettier --parser typescript",
