chore: update nginx config

--- a/website-doc/nginx.conf
+++ b/website-doc/nginx.conf
@@ -35,6 +35,7 @@ http {
     include /etc/nginx/conf.d/*.conf;
 
     server {
+        server_name_in_redirect off;
 
         location / {
             client_max_body_size 0;
