--- a/packages/platform-widget-access-register/package.json
+++ b/packages/platform-widget-access-register/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@platform-widget-access/prop-item-rely",
-  "description": "平台组件依赖的属性项",
+  "name": "@platform-widget-access/register",
+  "description": "平台组件接入注册",
   "version": "0.0.1",
   "author": "SANGET",
   "license": "MIT",
