--- a/website-doc/nginx.conf
+++ b/website-doc/nginx.conf
@@ -35,7 +35,7 @@ http {
     include /etc/nginx/conf.d/*.conf;
 
     server {
-        server_name_in_redirect off;
+        server_name_in_redirect on;
 
         location / {
             client_max_body_size 0;
