--- a/packages/platform-widget-prop-item-hub/PageSizeHelper/package.json
+++ b/packages/platform-widget-prop-item-hub/PageSizeHelper/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@platform-widget-prop-item/page-size-helper",
-  "description": "标题位置",
+  "description": "分页情况",
   "version": "0.0.1",
   "author": "LIJIA",
   "license": "MIT",
