--- a/packages/provider-app-pages-hub/PageDesigner/package.json
+++ b/packages/provider-app-pages-hub/PageDesigner/package.json
@@ -6,10 +6,12 @@
     "start": "cross-env PORT=6689 minictl start"
   },
   "devDependencies": {
+    "@types/sortablejs": "^1.10.6",
     "@infra/react-dev-env-scripts": "^0.0.1",
     "moment": "^2.25.3"
   },
   "dependencies": {
+    "sortablejs": "^1.12.0"
   },
   "author": "SANGET",
   "license": "MIT",
