--- a/packages/ui-code-editor/package.json
+++ b/packages/ui-code-editor/package.json
@@ -26,7 +26,7 @@
     "ie >= 11"
   ],
   "devDependencies": {
-    "@types/codemirror": "^0.0.97",
+    "@types/codemirror": "^0.0.102",
     "react-frame-component": "^4.1.3"
   },
   "dependencies": {
@@ -39,7 +39,5 @@
   "publishConfig": {
     "access": "public"
   },
-  "authors": [
-
-  ]
+  "authors": []
 }
