--- a/packages/provider-app/provider-app-pages-hub/DictionaryManager/package.json
+++ b/packages/provider-app/provider-app-pages-hub/DictionaryManager/package.json
@@ -5,7 +5,6 @@
   "author": "LIJIA",
   "license": "MIT",
   "dependencies": {
-    "react-color":"^2.18.1",
-    "lodash": "4.17.20"
+    "react-color": "^2.18.1"
   }
 }
