--- a/packages/provider-app/provider-app-pages-hub/TableEditor/package.json
+++ b/packages/provider-app/provider-app-pages-hub/TableEditor/package.json
@@ -3,8 +3,6 @@
   "version": "0.0.1",
   "private": true,
   "author": "LIJIA",
-  "dependencies": {
-    "lodash": "4.17.20"
-  },
+  "dependencies": {},
   "license": "MIT"
 }
