--- a/platform-web-server/package.json
+++ b/platform-web-server/package.json
@@ -41,6 +41,7 @@
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
+    "@types/consul": "^0.23.34",
     "@types/express": "^4.17.3",
     "@types/jest": "26.0.15",
     "@types/node": "^14.14.10",
