--- a/packages/consumer-app/web-server/package.json
+++ b/packages/consumer-app/web-server/package.json
@@ -15,7 +15,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "fs-extra": "^9.0.1",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.3",
