--- a/packages/shared/engine-low-code/package.json
+++ b/packages/shared/engine-low-code/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "description": "低代码引擎",
   "dependencies": {
-    "@babel/core": "^7.11.4",
-    "@babel/types": "^7.11.0",
-    "@babel/traverse": "^7.11.0",
-    "@babel/parser": "^7.11.4",
-    "@babel/generator": "^7.11.4",
-    "@babel/preset-env": "^7.11.0",
+    "@babel/core": "7.11.0",
+    "@babel/types": "7.12.11",
+    "@babel/traverse": "7.11.0",
+    "@babel/parser": "7.11.4",
+    "@babel/generator": "7.11.0",
+    "@babel/preset-env": "7.11.0",
     "axios": "^0.20.0"
   }
 }
