--- a/packages/shared/infra-react-env-scripts/package.json
+++ b/packages/shared/infra-react-env-scripts/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@babel/core": "7.4.3",
-    "@babel/plugin-proposal-export-default-from": "^7.2.0",
+    "@babel/plugin-proposal-export-default-from": "7.2.0",
     "@svgr/webpack": "4.1.0",
     "ts-loader": "^8.0.3",
     "babel-loader": "8.0.5",
@@ -17,7 +17,7 @@
     "babel-preset-react-app": "^9.1.2",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
-    "css-loader": "2.1.1",
+    "css-loader": "5.0.1",
     "dotenv": "6.2.0",
     "dotenv-expand": "4.2.0",
     "eslint-webpack-plugin": "^2.4.1",
@@ -29,18 +29,18 @@
     "is-wsl": "^1.1.0",
     "immer": "^7.0.7",
     "less": "^3.11.3",
-    "less-loader": "^6.2.0",
+    "less-loader": "^7.1.0",
     "long": "^4.0.0",
-    "mini-css-extract-plugin": "0.5.0",
-    "sass": "^1.26.10",
+    "mini-css-extract-plugin": "1.3.3",
+    "sass": "^1.30.0",
     "immutability-helper": "^3.1.1",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
-    "postcss-flexbugs-fixes": "4.1.0",
-    "postcss-loader": "3.0.0",
-    "postcss-normalize": "7.0.1",
+    "postcss-flexbugs-fixes": "5.0.2",
+    "postcss-loader": "4.1.0",
+    "postcss-normalize": "9.0.0",
     "postcss-preset-env": "6.6.0",
-    "postcss-safe-parser": "4.0.1",
+    "postcss-safe-parser": "5.0.2",
     "react": "16.14.0",
     "react-app-polyfill": "^1.0.1",
     "react-dev-utils": "^9.0.1",
@@ -50,12 +50,12 @@
     "react-redux": "^7.2.1",
     "thread-loader": "^3.0.1",
     "resolve": "1.10.0",
-    "sass-loader": "7.1.0",
+    "sass-loader": "10.1.0",
     "semver": "6.0.0",
-    "style-loader": "0.23.1",
-    "terser-webpack-plugin": "1.2.3",
+    "style-loader": "2.0.0",
+    "terser-webpack-plugin": "4.2.3",
     "ts-pnp": "1.1.2",
-    "url-loader": "1.1.2",
+    "url-loader": "4.1.1",
     "speed-measure-webpack-plugin": "^1.3.3",
     "webpack-bundle-analyzer": "3.9.0",
     "webpack": "4.29.6",
