--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "sourceMap": true,
     "forceConsistentCasingInFileNames": true,
     "declaration": true,
+    "sourceMap": true,
     "module": "ESNext",
     "moduleResolution": "node",
     "jsx": "react"
