--- a/packages/shared/infra-react-env-scripts/package.json
+++ b/packages/shared/infra-react-env-scripts/package.json
@@ -24,6 +24,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "6.0.0",
     "fs-extra": "8.1.0",
+    "formik": "2.2.6",
     "html-webpack-plugin": "4.3.0",
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "^1.1.0",
@@ -56,6 +57,7 @@
     "terser-webpack-plugin": "4.2.3",
     "ts-pnp": "1.1.2",
     "url-loader": "4.1.1",
+    "yup": "0.32.8",
     "speed-measure-webpack-plugin": "^1.3.3",
     "webpack-bundle-analyzer": "3.9.0",
     "webpack": "4.29.6",
