feat: 认证中心接口对接代码开发完毕

--- a/packages/consumer-app/web-client/package.json
+++ b/packages/consumer-app/web-client/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
-    "store": "^2.0.12"
+    "store": "^2.0.12",
+    "crypto-js": "^4.0.0"
   },
   "author": "SANGET",
   "license": "MIT",
