feat: 调整配置端整体样式，更新 webpack 打包链路

--- a/packages/consumer-app/web-client/package.json
+++ b/packages/consumer-app/web-client/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
+    "@infra/ui": "0.0.1",
     "store": "^2.0.12"
   },
   "author": "SANGET",
