--- a/packages/provider-app/provider-app-entry/package.json
+++ b/packages/provider-app/provider-app-entry/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
+    "@infra/ui": "0.0.1",
     "unistore": "^3.5.2"
   },
   "author": "SANGET",
