--- a/packages/shared/infra-react-env-scripts/package.json
+++ b/packages/shared/infra-react-env-scripts/package.json
@@ -11,7 +11,6 @@
     "@babel/core": "7.4.3",
     "@babel/plugin-proposal-export-default-from": "7.2.0",
     "@svgr/webpack": "4.1.0",
-    "ts-loader": "^8.0.3",
     "babel-loader": "8.0.5",
     "babel-plugin-named-asset-import": "^0.3.6",
     "babel-preset-react-app": "^9.1.2",
@@ -24,40 +23,33 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "6.0.0",
     "fs-extra": "8.1.0",
-    "formik": "2.2.6",
     "html-webpack-plugin": "4.3.0",
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "^1.1.0",
-    "immer": "^7.0.7",
     "less": "^3.11.3",
     "less-loader": "^7.1.0",
     "long": "^4.0.0",
-    "mini-css-extract-plugin": "1.3.3",
-    "sass": "^1.30.0",
+    "mini-css-extract-plugin": "0.11.3",
     "immutability-helper": "^3.1.1",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
-    "postcss-flexbugs-fixes": "5.0.2",
-    "postcss-loader": "4.1.0",
-    "postcss-normalize": "9.0.0",
-    "postcss-preset-env": "6.6.0",
+    "postcss-flexbugs-fixes": "4.2.1",
+    "postcss-loader": "3.0.0",
+    "postcss-normalize": "8.0.1",
+    "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "5.0.2",
-    "react": "16.14.0",
     "react-app-polyfill": "^1.0.1",
     "react-dev-utils": "^9.0.1",
-    "react-dom": "16.14.0",
-    "redux": "^4.0.5",
-    "redux-logger": "^3.0.6",
-    "react-redux": "^7.2.1",
     "thread-loader": "^3.0.1",
     "resolve": "1.10.0",
+    "sass": "1.30.0",
     "sass-loader": "10.1.0",
     "semver": "6.0.0",
     "style-loader": "2.0.0",
     "terser-webpack-plugin": "4.2.3",
     "ts-pnp": "1.1.2",
+    "ts-loader": "^8.0.3",
     "url-loader": "4.1.1",
-    "yup": "0.32.8",
     "speed-measure-webpack-plugin": "^1.3.3",
     "webpack-bundle-analyzer": "3.9.0",
     "webpack": "4.29.6",
@@ -69,12 +61,6 @@
   "resolutions": {
     "@types/react-dom": "17.0.0",
     "@types/react": "17.0.0"
-  },
-  "devDependencies": {
-    "@types/react": "17.0.0",
-    "@types/react-dom": "17.0.0",
-    "@types/react-redux": "7.1.9",
-    "@types/redux": "3.6.0"
   },
   "repository": {
     "type": "git",
